--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "start": "vite"
   },
   "dependencies": {
+    "@aws-amplify/ui-react": "^6.1.14",
     "@aws-sdk/client-s3": "^3.617.0",
     "@coreui/chartjs": "^4.0.0",
     "@coreui/coreui": "^5.0.2",
@@ -28,7 +29,9 @@
     "@coreui/react-chartjs": "^3.0.0",
     "@coreui/utils": "^2.0.2",
     "@popperjs/core": "^2.11.8",
+    "aws-amplify": "^6.4.3",
     "aws-sdk": "^2.1662.0",
+    "axios": "^1.7.2",
     "chart.js": "^4.4.3",
     "classnames": "^2.5.1",
     "core-js": "^3.37.1",
