--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   "dependencies": {
     "@aws-amplify/ui-react": "^6.1.14",
     "@aws-sdk/client-s3": "^3.617.0",
+    "@cloudinary/react": "^1.13.0",
+    "@cloudinary/url-gen": "^1.20.0",
     "@coreui/chartjs": "^4.0.0",
     "@coreui/coreui": "^5.0.2",
     "@coreui/icons": "^3.0.1",
